<resources>
    <string name="app_name">Your Money => Our Money</string>

    <string name="country_prompt">Choose a country</string>

    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <string name="necessary_button_text">Necesara</string>
    <string name="unnecessary_button_text">Nenecesara</string>
    <string name="edit_text_transaction_amount_hint">Valoare</string>
    <string name="edit_text_transaction_date_hint">Data</string>
    <string name="edit_text_transaction_description_hint">Descriere</string>
    <string name="add_expanse_button_text">Adauga Cheltuiala</string>
    <string name="add_income_button_text">Adauga Venit</string>


</resources>
