<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_text_income_amount"
        android:stateListAnimator="@null"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:padding="10dp"
        android:background="@drawable/rectangle"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_transaction_amount_hint"
        android:inputType="numberDecimal"
        android:layout_width="fill_parent">
    </EditText>

    <EditText
        android:id="@+id/edit_text_income_date"
        android:stateListAnimator="@null"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:padding="10dp"
        android:background="@drawable/rectangle"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_transaction_date_hint"
        android:inputType="date"
        android:layout_width="fill_parent">
    </EditText>

    <EditText
        android:id="@+id/edit_text_income_description"
        android:stateListAnimator="@null"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:height="100dp"
        android:background="@drawable/rectangle"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        android:hint="@string/edit_text_transaction_description_hint"
        android:inputType="text|textMultiLine"
        android:layout_width="fill_parent">
    </EditText>

    <Button
        android:id="@+id/addIncome"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/add_income_button_text"
        android:onClick="addIncome"/>

</LinearLayout>